conclusao do site

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <h2 style="margin: 0; color: #d10000; font-size: 20px; margin-bottom: 8px;">
                                 Fórmula 1 na Globo
                             </h2>
-                            <img style="width: 680px; height: 420px;" src="imagens/anuncio_globo_f1.jpg" alt="Evento de anuncio do retorno da Formula 1 na Globo">
+                            <img style="width: 680px; height: 420px;" src="https://email-noticias-f1.vercel.app/imagens/anuncio_globo_f1.jpg" alt="Evento de anuncio do retorno da Formula 1 na Globo">
                             <p style="margin: 10px 0; color: #555; font-size: 16px;">
                                 Globo exibe carro de Fórmula 1 durante abertura de evento e praticamente anuncia o retorno da categoria ao cardápio esportivo da emissora em 2025.
                             </p>
@@ -41,7 +41,7 @@
                             <h2 style="margin: 0; color: #d10000; font-size: 20px; margin-bottom: 8px;" >
                                 Mudança de regra?
                             </h2>
-                            <img style="width: 680px; height: 420px;" src="imagens/carros_f1.jpg" alt="carros da Fórmula 1 em largada de uma corrida">
+                            <img style="width: 680px; height: 420px;" src="https://email-noticias-f1.vercel.app/imagens/carros_f1.jpg" alt="carros da Fórmula 1 em largada de uma corrida">
                             <p style="margin: 10px 0; color: #555; font-size: 16px;">
                                 FIA reage para acabar com "truque" que muda configuração de assoalho em parque fechado.
                             </p>
@@ -57,7 +57,7 @@
                             <h2 style="margin: 0; color: #d10000; font-size: 20px; margin-bottom: 8px;">
                                 Christian Horner falou sobre as opções da Red Bull para 2025
                             </h2>
-                            <img style="width: 680px; height: 420px;" src="imagens/redbull_f1.jpg" alt="Foto do Christian Horner, chefe de equipe da Red Bull racing">
+                            <img style="width: 680px; height: 420px;" src="https://email-noticias-f1.vercel.app/imagens/redbull_f1.jpg" alt="Foto do Christian Horner, chefe de equipe da Red Bull racing">
                             <p style="margin: 10px 0; color: #555; font-size: 16px;">
                                 Red Bull avalia “cenário ideal” e diz que duelo entre Lawson e Tsunoda “vai além da RB”
                             </p>
